Refresh button styling

--- a/src/Hvac.Web/wwwroot/index.html
+++ b/src/Hvac.Web/wwwroot/index.html
@@ -57,7 +57,10 @@
                         <p class="is-size-3" id="indoorTemperature">--</p>
                     </div>
 
-                    <button id="btnReload" class="button is-secondary">⟳ Refresh</button>
+                    <div class="has-text-centered">
+                        <p class="label">Refresh</p>
+                        <button id="btnReload" class="button is-secondary">⟳</button>
+                    </div>
                 </div>
 
                 <hr />
