--- a/src/Hvac.Web/wwwroot/index.html
+++ b/src/Hvac.Web/wwwroot/index.html
@@ -10,31 +10,31 @@
 </head>
 
 <body>
-    <main class="container is-max-desktop my-4">
+    <main class="container is-max-desktop">
         <div class="level">
             <div class="level-left">
-                <div class="level-item is-hidden-mobile">
+                <div class="level-item m-4 is-hidden-mobile">
                     <h1 class="title">HVAC</h1>
                 </div>
             </div>
 
-            <div id="tabs" class="level-item"></div>
+            <div id="tabs" class="level-item m-4"></div>
 
             <div class="level-right">
-                <div id="themeSwitcher" class="level-item is-hidden-mobile"></div>
-            </div>
-        </div>
-
-        <div id="errorSection" class="section is-hidden">
-            <div class="is-flex is-flex-direction-row is-justify-content-center">
-                <div id="errorMessage" class="message is-danger errorMessage" style="width: fit-content;">
-                    <div class="message-header">Error</div>
-                    <div class="message-body"></div>
-                </div>
+                <div id="themeSwitcher" class="level-item m-4 is-hidden-mobile"></div>
             </div>
         </div>
 
         <div id="mainSection" class="section is-hidden">
+            <div id="errorSection" class="section is-hidden">
+                <div class="is-flex is-flex-direction-row is-justify-content-center">
+                    <div id="errorMessage" class="message is-danger errorMessage" style="width: fit-content;">
+                        <div class="message-header">Error</div>
+                        <div class="message-body"></div>
+                    </div>
+                </div>
+            </div>
+
             <div id="controls" class="box">
                 <div class="is-flex is-flex-direction-row is-flex-wrap-wrap is-justify-content-space-evenly my-4">
                     <div class="field">
