--- a/src/Hvac.Web/wwwroot/index.html
+++ b/src/Hvac.Web/wwwroot/index.html
@@ -39,29 +39,19 @@
 
             <div id="controls" class="box">
                 <div class="is-flex is-flex-direction-row is-flex-wrap-wrap is-justify-content-space-evenly my-4">
-                    <div class="field">
-                        <label for="power" class="label">⏻ Power</label>
-                        <div id="power" class="control">
-                            <label for="powerOff" class="radio">
-                                <input id="powerOn" type="radio" name="power" value="on" />
-                                On
-                            </label>
+                    <div class="has-text-centered">
+                        <p class="label">Power</p>
+                        <button id="btnPower" class="button is-size-4">⏻</button>
+                    </div>                    
 
-                            <label for="powerOff" class="radio">
-                                <input id="powerOff" type="radio" name="power" value="off" />
-                                Off
-                            </label>
-                        </div>
+                    <div class="has-text-centered">
+                        <span class="label">Actual temp</span>
+                        <span class="is-size-3" id="indoorTemperature">--</span>
                     </div>
 
                     <div class="has-text-centered">
-                        <p class="label">Actual temperature</p>
-                        <p class="is-size-3" id="indoorTemperature">--</p>
-                    </div>
-
-                    <div class="has-text-centered">
-                        <p class="label">Refresh</p>
-                        <button id="btnReload" class="button is-secondary">⟳</button>
+                        <span class="label">Refresh</span>
+                        <button id="btnReload" class="button is-secondary is-size-4">⟳</button>
                     </div>
                 </div>
 
@@ -70,20 +60,24 @@
                 <div class="is-flex is-flex-direction-row is-flex-wrap-wrap is-justify-content-space-evenly mb-2">
                     <div class="field">
                         <label for="mode" class="label">Mode</label>
-                        <div class="select">
+                        <div class="select is-size-5">
                             <select id="mode">
                             </select>
                         </div>
                     </div>
 
                     <div class="field">
-                        <label for="desiredTemperature" class="label">Set temperature</label>
-                        <input id="desiredTemperature" class="input" type="number" placeholder="Temperature">
+                        <label for="desiredTemperature" class="label">Set temp</label>
+                        <input
+                            id="desiredTemperature"
+                            class="input is-size-5 input-desired-temperature"
+                            type="number"
+                            placeholder="Temp." />
                     </div>
 
                     <div class="field">
                         <label for="temperatureScale" class="label">Scale</label>
-                        <div class="select">
+                        <div class="select is-size-5">
                             <select id="temperatureScale">
                             </select>
                         </div>
@@ -104,7 +98,7 @@
                     </div>
 
                     <div class="field">
-                        <label for="horizontalFlow" class="label">Horizontal flow</label>
+                        <label for="horizontalFlow" class="label">Horiz. flow</label>
                         <div class="select">
                             <select id="horizontalFlow">
                             </select>
@@ -113,7 +107,7 @@
                     </div>
 
                     <div class="field">
-                        <label for="verticalFlow" class="label">Vertical flow</label>
+                        <label for="verticalFlow" class="label">Vert. flow</label>
                         <div class="select">
                             <select id="verticalFlow">
                             </select>
@@ -126,49 +120,49 @@
 
                 <div class="is-flex is-flex-direction-row is-flex-wrap-wrap is-justify-content-space-evenly mt-2">
                     <div class="field">
-                        <label class="checkbox">
+                        <label class="checkbox is-size-5 m-2">
                             <input id="turbo" type="checkbox" />
                             Turbo
                         </label>
                     </div>
 
                     <div class="field">
-                        <label class="checkbox">
+                        <label class="checkbox is-size-5 m-2">
                             <input id="quiet" type="checkbox" />
                             Quiet
                         </label>
                     </div>
 
                     <div class="field">
-                        <label class="checkbox">
+                        <label class="checkbox is-size-5 m-2">
                             <input id="display" type="checkbox" />
                             Display
                         </label>
                     </div>
 
                     <div class="field">
-                        <label class="checkbox">
+                        <label class="checkbox is-size-5 m-2">
                             <input id="health" type="checkbox" />
                             Health
                         </label>
                     </div>
 
                     <div class="field">
-                        <label class="checkbox">
+                        <label class="checkbox is-size-5 m-2">
                             <input id="drying" type="checkbox" />
                             Drying
                         </label>
                     </div>
 
                     <div class="field">
-                        <label class="checkbox">
+                        <label class="checkbox is-size-5 m-2">
                             <input id="sleep" type="checkbox" />
                             Sleep
                         </label>
                     </div>
 
                     <div class="field">
-                        <label class="checkbox">
+                        <label class="checkbox is-size-5 m-2">
                             <input id="eco" type="checkbox" />
                             Eco
                         </label>
@@ -249,14 +243,14 @@
         <div class="field">
             <label class="label">API URL</label>
             <div class="control">
-                <input class="input input-api-url" type="text" placeholder="API URL" spellcheck="false" />
+                <input class="input input-api-url" type="url" placeholder="API URL" spellcheck="false" />
             </div>
         </div>
 
         <div class="field">
             <label class="label">API key</label>
             <div class="control">
-                <input class="input input-api-key" type="text" placeholder="API key" spellcheck="false" />
+                <input class="input input-api-key" type="password" placeholder="API key" spellcheck="false" />
             </div>
         </div>
         
